2004-03-07  Andreas Jaeger  <aj@suse.de>

	* gas/cfi/cfi-x86_64.d: Adjust offsets.

2004-03-07  Richard Henderson  <rth@redhat.com>

	* gas/alpha/elf-reloc-8.d, gas/cfi/cfi-alpha-1.d,
	gas/cfi/cfi-alpha-2.d, gas/cfi/cfi-alpha-3.d, gas/cfi/cfi-common-1.d,
	gas/cfi/cfi-common-2.d, gas/cfi/cfi-common-3.d: Adjust offsets.

2004-03-03  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* gas/sh/sh64/err-dsp.s: Fix expected error message.

2004-03-01  Richard Sandiford  <rsandifo@redhat.com>

	* gas/frv/fr405-insn.[sdl]: New test.
	* gas/frv/fr450-spr.[sd]: New test.
	* gas/frv/fr450-insn.[sdl]: New test.
	* gas/frv/fr450-media-issue.[sl]: New test.
	* gas/frv/allinsn.exp: Run new tests.  Ensure fr405 instructions
	aren't accepted for -mcpu=fr400 or -mcpu=fr500.  Ensure fr450
	instructions aren't accepted for -mcpu=fr400, -mcpu=fr405 or
	-mcpu=fr500.

2004-03-01  Richard Sandiford  <rsandifo@redhat.com>

	* gas/frv/allinsn.s (rstb, rsth, rst, rstd, rstq): Replace with nops.
	(rstbf, rsthf, rstf, rstdf, rstqf): Likewise.
	* gas/frv/allinsn.d: Update accordingly.

2004-02-17  Petko Manolov  <petkan@nucleusys.com>

	* gas/arm/maverick.c: DSPSC to/from opcode fixes.
	* gas/arm/maverick.d: Likewise.
	* gas/arm/maverick.s: Likewise.

2004-02-09  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* gas/sh/basic.exp: Don't do sh4a tests for sh5.

2004-02-06  Nathan Sidwell  <nathan@codesourcery.com>

	* gas/macros/test2.s: Lowercase it.

2004-02-02  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* gas/mips/div.d: Update to accomodate changes in macro
	expansions.
	gas/mips/elf-rel-got-n32.d: Likewise.
	gas/mips/elf-rel-got-n64.d: Likewise.
	gas/mips/elf-rel-xgot-n32.d: Likewise.
	gas/mips/elf-rel-xgot-n64.d: Likewise.
	gas/mips/la-svr4pic.d: Likewise.
	gas/mips/la-xgot.d: Likewise.
	gas/mips/lca-svr4pic.d: Likewise.
	gas/mips/lca-xgot.d: Likewise.

2004-02-01  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* gas/sh/sh4a-fp.d: Fix opcode name fssra to fsrra.
	* gas/sh/sh4a-fp.s: Likewise.