@@ -1,3 +1,7 @@
+2004-03-07  Richard Henderson  <rth@redhat.com>
+
+	* gas/cfi/cfi-common-2.d, gas/cfi/cfi-i386.d: Adjust offsets.
+
 2004-03-07  Andreas Jaeger  <aj@suse.de>
 
 	* gas/cfi/cfi-x86_64.d: Adjust offsets.
